--- a/AboutUs.css
+++ b/AboutUs.css
@@ -150,7 +150,12 @@
   font-family: var(--font-londrina-solid);
 }
 .lost-in-a-world-of-endless-car {
+  width: 100%;
   margin: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 .dont-worry-youre {
   margin: 0;
@@ -191,26 +196,27 @@
   color: #2167fd;
 }
 .how-by-connecting-container {
-  width: 973px;
-  position: relative;
+  position: center;
   display: inline-block;
   /* filter: blur(4px); */
 }
 .how-by-connecting-you-with-re-wrapper {
+  width: 100%;
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding: 0 var(--padding-27xl);
+  align-items: center;
+  justify-content: center;
 }
 .description-container-parent,
 .frame-group {
-  width: 1065px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+  border-radius: 20px;
   gap: 52px;
+  padding: 3%;
   max-width: 100%;
   text-align: center;
   font-size: var(--font-size-24xl);
@@ -218,11 +224,9 @@
   font-family: var(--font-londrina-solid);
 }
 .frame-group {
-  margin-left: -300px;
-  width: 1552px;
+  width: 100%;
   overflow: hidden;
   align-items: center;
-  padding: var(--padding-43xl) var(--padding-xl) 92px var(--padding-2xl);
   box-sizing: border-box;
   gap: 60px;
   background-image: url(./public/frame-2@3x.png);
@@ -295,7 +299,7 @@
   gap: var(--gap-5xs);
 }
 .footer-content-wrapper {
-  width: 917px;
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
